2010-01-24  Adam Barth  <abarth@webkit.org>

        Rubber stamped by Eric Seidel.

        More pep8 compliance.

        * Scripts/webkitpy/mock_bugzillatool.py:

2010-01-24  Adam Barth  <abarth@webkit.org>

        Rubber stamped by Eric Seidel.

        More pep8 compliance.

        * Scripts/webkitpy/executive.py:
        * Scripts/webkitpy/grammar.py:

2010-01-24  Adam Barth  <abarth@webkit.org>

        Rubber stamped by Eric Seidel.

        More pep8 compliance.

        * Scripts/webkitpy/comments.py:
        * Scripts/webkitpy/committers.py:
        * Scripts/webkitpy/credentials.py:

2010-01-24  Adam Barth  <abarth@webkit.org>

        Rubber stamped by Eric Seidel.

        Make changelogs.py pass pep8.

        * Scripts/webkitpy/changelogs.py:

2010-01-23  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        [Qt] Unreviewed build fix

        * QtLauncher/QtLauncher.pro:
        * QtLauncher/webinspector.h:

2010-01-23  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Rubberstamped by Simon Hausmann.

        [Qt] Move the WebInspector class to it's own header file.

        * QtLauncher/main.cpp:
        * QtLauncher/webinspector.h: Added.
        (WebInspector::WebInspector):
        (WebInspector::showEvent):
        (WebInspector::hideEvent):

2010-01-23  Robert Hogan  <robert@roberthogan.net>

        Reviewed by Kenneth Rohde Christiansen.

        Qt DRT: respect window.close() and window.closed()
        
        Qt DRT needs to maintain a correct count of open windows
        for windowCount(). It also needs to delete windows that
        have been closed by window.close().
        
        This fixes the following tests:
        
        plugins/destroy-during-npp-new.html
        fast/dom/Document/early-document-access.html
        fast/dom/Window/window-early-properties.html
        fast/events/open-window-from-another-frame.html
        fast/events/popup-blocking-click-in-iframe.html
        