@@ -87,7 +87,7 @@ sub expectedDirectoryForTest($;$;$);
 sub fileNameWithNumber($$);
 sub htmlForResultsSection(\@$&);
 sub isTextOnlyTest($);
-sub launchWithEnv(\@\%);
+sub launchWithCurrentEnv(@);
 sub resolveAndMakeTestResultsDirectory();
 sub numericcmp($$);
 sub openDiffTool();
@@ -659,7 +659,7 @@ for my $test (@tests) {
         } else {
             $testPath = canonpath($testPath);
         }
-        print OUT "$testPath$suffixExpectedHash\n" if defined $testPath;
+        print OUT "$testPath$suffixExpectedHash\n";
     }
 
     # DumpRenderTree is expected to dump two "blocks" to stdout for each test.
@@ -1027,10 +1027,6 @@ if (isGtk()) {
   system "WebKitTools/Scripts/run-launcher", @configurationArgs, "file://".$testResults if $launchSafari;
 } elsif (isQt()) {
   unshift @configurationArgs, qw(-graphicssystem raster -style windows);
-  if (isCygwin()) {
-    $testResults = "/" . toWindowsPath($testResults);
-    $testResults =~ s/\\/\//g;
-  }
   system "WebKitTools/Scripts/run-launcher", @configurationArgs, "file://".$testResults if $launchSafari;
 } elsif (isCygwin()) {
   system "cygstart", $testResults if $launchSafari;
@@ -1214,20 +1210,20 @@ sub slowestcmp($$)
     return pathcmp($testa, $testb);
 }
 
-sub launchWithEnv(\@\%)
+sub launchWithCurrentEnv(@)
 {
-    my ($args, $env) = @_;
+    my (@args) = @_;
 
     # Dump the current environment as perl code and then put it in quotes so it is one parameter.
-    my $environmentDumper = Data::Dumper->new([\%{$env}], [qw(*ENV)]);
+    my $environmentDumper = Data::Dumper->new([\%ENV], [qw(*ENV)]);
     $environmentDumper->Indent(0);
     $environmentDumper->Purity(1);
     my $allEnvVars = $environmentDumper->Dump();
-    unshift @{$args}, "\"$allEnvVars\"";
+    unshift @args, "\"$allEnvVars\"";
 
     my $execScript = File::Spec->catfile(sourceDir(), qw(WebKitTools Scripts execAppWithEnv));
-    unshift @{$args}, $execScript;
-    return @{$args};
+    unshift @args, $execScript;
+    return @args;
 }
 
 sub resolveAndMakeTestResultsDirectory()
@@ -1242,9 +1238,10 @@ sub openDiffTool()
     return if $isDiffToolOpen;
     return if !$pixelTests;
 
-    my %CLEAN_ENV;
-    $CLEAN_ENV{MallocStackLogging} = 1 if $shouldCheckLeaks;
-    $imageDiffToolPID = open2(\*DIFFIN, \*DIFFOUT, $imageDiffTool, launchWithEnv(@diffToolArgs, %CLEAN_ENV)) or die "unable to open $imageDiffTool\n";
+    local %ENV;
+    $ENV{MallocStackLogging} = 1 if $shouldCheckLeaks;
+    $imageDiffToolPID = open2(\*DIFFIN, \*DIFFOUT, $imageDiffTool, launchWithCurrentEnv(@diffToolArgs)) or die "unable to open $imageDiffTool\n";
+    $ENV{MallocStackLogging} = 0 if $shouldCheckLeaks;
     $isDiffToolOpen = 1;
 }
 
@@ -1252,52 +1249,56 @@ sub openDumpTool()
 {
     return if $isDumpToolOpen;
 
-    my %CLEAN_ENV;
+    # Save environment variables required for the linux environment.
+    my $homeDir = $ENV{'HOME'};
+    my $libraryPath = $ENV{'LD_LIBRARY_PATH'};
+    my $dyldLibraryPath = $ENV{'DYLD_LIBRARY_PATH'};
+    my $dbusAddress = $ENV{'DBUS_SESSION_BUS_ADDRESS'};
+    my $display = $ENV{'DISPLAY'};
+    my $xauthority = $ENV{'XAUTHORITY'};
+    my $testfonts = $ENV{'WEBKIT_TESTFONTS'};
 
-    # Generic environment variables
-    $CLEAN_ENV{XML_CATALOG_FILES} = ""; # work around missing /etc/catalog <rdar://problem/4292995>
-
-    # Platform spesifics
-    if (isLinux()) {
-        if (defined $ENV{'DISPLAY'}) {
-            $CLEAN_ENV{DISPLAY} = $ENV{'DISPLAY'};
+    my $homeDrive = $ENV{'HOMEDRIVE'};
+    my $homePath = $ENV{'HOMEPATH'};
+        
+    local %ENV;
+    if (isQt() || isGtk()) {
+        if (defined $display) {
+            $ENV{DISPLAY} = $display;
         } else {
-            $CLEAN_ENV{DISPLAY} = ":1";
+            $ENV{DISPLAY} = ":1";
         }
-        if (defined $ENV{'XAUTHORITY'}) {
-            $CLEAN_ENV{XAUTHORITY} = $ENV{'XAUTHORITY'};
+        if (defined $xauthority) {
+            $ENV{XAUTHORITY} = $xauthority;
         }
-
-        if (defined $ENV{'WEBKIT_TESTFONTS'}) {
-            $CLEAN_ENV{WEBKIT_TESTFONTS} = $ENV{'WEBKIT_TESTFONTS'};
+        $ENV{'WEBKIT_TESTFONTS'} = $testfonts if defined($testfonts);
+        $ENV{HOME} = $homeDir;
+        if (defined $libraryPath) {
+            $ENV{LD_LIBRARY_PATH} = $libraryPath;
         }
-
-        $CLEAN_ENV{HOME} = $ENV{'HOME'};
-        if (defined $ENV{'LD_LIBRARY_PATH'}) {
-            $CLEAN_ENV{LD_LIBRARY_PATH} = $ENV{'LD_LIBRARY_PATH'};
+        if (defined $dyldLibraryPath) {
+            $ENV{DYLD_LIBRARY_PATH} = $dyldLibraryPath;
         }
-        if (defined $ENV{'DBUS_SESSION_BUS_ADDRESS'}) {
-            $CLEAN_ENV{DBUS_SESSION_BUS_ADDRESS} = $ENV{'DBUS_SESSION_BUS_ADDRESS'};
+        if (defined $dbusAddress) {
+            $ENV{DBUS_SESSION_BUS_ADDRESS} = $dbusAddress;
         }
-    } elsif (isDarwin()) {
-        if (defined $ENV{'DYLD_LIBRARY_PATH'}) {
-            $CLEAN_ENV{DYLD_LIBRARY_PATH} = $ENV{'DYLD_LIBRARY_PATH'};
-        }
-
-        $CLEAN_ENV{DYLD_FRAMEWORK_PATH} = $productDir;
-        $CLEAN_ENV{DYLD_INSERT_LIBRARIES} = "/usr/lib/libgmalloc.dylib" if $guardMalloc;
-    } elsif (isCygwin()) {
-        $CLEAN_ENV{HOMEDRIVE} = $ENV{'HOMEDRIVE'};
-        $CLEAN_ENV{HOMEPATH} = $ENV{'HOMEPATH'};
-
-        setPathForRunningWebKitApp(\%CLEAN_ENV);
     }
-
-    # Port spesifics
     if (isQt()) {
-        $CLEAN_ENV{QTWEBKIT_PLUGIN_PATH} = productDir() . "/lib/plugins";
+        $ENV{QTWEBKIT_PLUGIN_PATH} = productDir() . "/lib/plugins";
     }
+    $ENV{DYLD_FRAMEWORK_PATH} = $productDir;
+    $ENV{XML_CATALOG_FILES} = ""; # work around missing /etc/catalog <rdar://problem/4292995>
+    $ENV{DYLD_INSERT_LIBRARIES} = "/usr/lib/libgmalloc.dylib" if $guardMalloc;
     
+    if (isCygwin()) {
+        $ENV{HOMEDRIVE} = $homeDrive;
+        $ENV{HOMEPATH} = $homePath;
+        if ($testfonts) {
+            $ENV{WEBKIT_TESTFONTS} = $testfonts;
+        }
+        setPathForRunningWebKitApp(\%ENV) if isCygwin();
+    }
+
     my @args = ($dumpTool, @toolArgs);
     if (isAppleMacWebKit() and !isTiger()) { 
         unshift @args, "arch", "-" . architecture();             
@@ -1306,15 +1307,10 @@ sub openDumpTool()
     if ($useValgrind) {
         unshift @args, "valgrind", "--suppressions=$platformBaseDirectory/qt/SuppressedValgrindErrors";
     } 
-
-    $CLEAN_ENV{MallocStackLogging} = 1 if $shouldCheckLeaks;
-
-    $dumpToolPID = open3(\*OUT, \*IN, \*ERROR, launchWithEnv(@args, %CLEAN_ENV)) or die "Failed to start tool: $dumpTool\n";
-    if (isCygwin()) {
-        # Convert '\r\n' => '\n', to match the expected files
-        binmode(IN, ":crlf");
-        binmode(ERROR, ":crlf");
-    }
+    
+    $ENV{MallocStackLogging} = 1 if $shouldCheckLeaks;
+    $dumpToolPID = open3(\*OUT, \*IN, \*ERROR, launchWithCurrentEnv(@args)) or die "Failed to start tool: $dumpTool\n";
+    $ENV{MallocStackLogging} = 0 if $shouldCheckLeaks;
     $isDumpToolOpen = 1;
     $dumpToolCrashed = 0;
 }
@@ -1341,6 +1337,7 @@ sub dumpToolDidCrash()
 {
     return 1 if $dumpToolCrashed;
     return 0 unless $isDumpToolOpen;
+
     my $pid = waitpid(-1, WNOHANG);
     return 1 if ($pid == $dumpToolPID);
 
@@ -1620,8 +1617,7 @@ sub convertPathUsingCygpath($$)
     local *inFH = $cygpath->{"in"};
     local *outFH = $cygpath->{"out"};
     print outFH $path . "\n";
-    my $convertedPath = <inFH>;
-    chomp($convertedPath) if defined $convertedPath;
+    chomp(my $convertedPath = <inFH>);
     return $convertedPath;
 }
 
