@@ -1,3 +1,14 @@
+2010-01-24  Eric Seidel  <eric@webkit.org>
+
+        No review, rolling out r53763.
+        http://trac.webkit.org/changeset/53763
+        https://bugs.webkit.org/show_bug.cgi?id=33895
+
+        Broke 20+ tests on Windows.
+
+        * Scripts/run-webkit-tests:
+        * Scripts/webkitdirs.pm:
+
 2010-01-24  Adam Barth  <abarth@webkit.org>
 
         Rubber stamped by Eric Seidel.
